

syntax = "proto3";

/**
protoc  --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative *.proto

**/

option go_package="example.com/creditcard/app/view_card/protos/bank";


package bank;

service Bank{
	rpc Create (BankCreateRequest) returns (BankCreateReply){}
	rpc Update (BankUpdateRequest) returns (BankUpdateReply){}
	rpc GetAll (BankGetAllRequest) returns (BankGetAllReply){}
	rpc GetByID(BankGetByIDRequest) returns (BankGetByIDReply){}
	
}

message BankPayload {
	string id = 1;
	string name = 2;
	string icon = 3;
}

message BankCreateRequest {
	BankPayload payload = 1;
}

message BankCreateReply {
	bool success = 1;
	string msg = 2;
}


message BankUpdateRequest {
	BankPayload payload = 1;
}
message BankUpdateReply {
	bool success = 1;
	string msg = 2;
}


message BankGetAllRequest {
}


message BankGetAllReply {
	bool success = 1;
	string msg = 2;
	repeated BankPayload banks = 3;
}


message BankGetByIDRequest {
	string id = 1;
}



message BankGetByIDReply {
	bool success = 1;
	string msg = 2;
	BankPayload bank = 3;
}
